@@ -20,7 +20,7 @@
  *
  *  All Rights Reserved.
  * 
- *  Version 1.2 (2011-03-16)
+ *  Version 1.2 (2011-03-21)
  *
  */
 
@@ -168,9 +168,9 @@ public class PageStyleConverter extends StyleConverterHelper {
         				// Background color
         				StyleInfo pageInfo = new StyleInfo();
         				getFrameSc().cssBackground(pageLayout,pageInfo.props,true);
-        				if (converter.isOPS()) { // Use zero margin for EPUB and default margins for XHTML
+        				/*if (converter.isOPS()) { // Use zero margin for EPUB and default margins for XHTML
         					pageInfo.props.addValue("margin", "0");
-        				}
+        				}*/
         				if (pageInfo.hasAttributes()) {
         					buf.append(sIndent).append("body {").append(pageInfo.props.toString()).append("}")
         					.append(config.prettyPrint() ? "\n" : " ");
