@@ -61,7 +61,7 @@
             <prop oor:name="UseDefaultFont" oor:type="xs:boolean" />
             <prop oor:name="DefaultFontName" oor:type="xs:string" />
             <prop oor:name="ConvertToPx" oor:type="xs:boolean" />
-            <prop oor:name="ImageSize" oor:type="xs:int"/>
+            <prop oor:name="ImageSize" oor:type="xs:short"/>
             <!-- AutoCorrect -->
             <prop oor:name="IgnoreEmptyParagraphs" oor:type="xs:boolean" />
             <prop oor:name="IgnoreHardLineBreaks" oor:type="xs:boolean" />
